현 위치 찾기 작업 중

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAO_JAVASCRIPT_KEY%"></script>
     <!-- (services: 검색/주소-좌표변환, drawing: 마커/그래픽스 객체) 라이브러리 불러오기 -->
-    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=APIKEY&libraries=services,drawing"></script>  
+    <!-- <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=APIKEY&libraries=services,drawing"></script>   -->
     <title>we-map</title>
   </head>
   <body>
