--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width,user-scalable=no, initial-scale=1, viewport-fit=cover" />
+    <meta name="viewport" content="width=device-width,user-scalable=no, initial-scale=1" />
     <!-- <meta name="theme-color" content="#000000" /> -->
     <meta name="description" content="Web site created using create-react-app" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
